[package]
name = "rspiker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-utils = "0.1.5"
draw = "0.3.0"
rocket = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
wfd = "0.1.7"