[package]
name = "rspiker"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-utils = "0.1.5"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
wfd = "0.1.7"
webbrowser = "0.5.5"
realfft = "2.0.1"
libloading = "0.7.0"
libc = "0.2.0"